<resources>
    <string name="app_name">First Doctor</string>
    <string name="first_doctor_logo">First Doctor Logo</string>
    <string name="first_doctor">First Doctor</string>
    <string name="welcome">First Doctor</string>
    <string name="reset_details">Provide your mobile no related to your account, for which you want to reset your password</string>
    <string name="description">Your online doctor that helps you to identify and rectify the oral problems</string>
    <string name="dentist_image">dentist image</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="back_button">back button</string>
    <string name="done">Done</string>
    <string name="already_registered">Already registered?</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_mobile_no">Enter mobile no.</string>
    <string name="next">Next</string>
    <string name="gender">Gender</string>
    <string name="enter_gender">Select gender</string>
    <string name="enter_age">Enter Age</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset\nPassword</string>
    <string name="select_role">Select Role</string>
    <string name="explore">Explore</string>
    <string name="consult_now">Consult now</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="my_complaints">My Complaints</string>
    <string name="settings">SETTINGS</string>
    <string name="settings_">Settings</string>
    <string name="first_doctor_title">FIRST DOCTOR</string>
    <string name="research">Research</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>

    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>
    <string name="welcome_to_first_doctor">Welcome to First Doctor</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="enter_address">Enter Address</string>
    <string name="continue_">continue</string>
    <string name="appointment_form">Appointment Form</string>
    <string name="select_domain">Select Domain</string>
    <string name="consultation">Consultation</string>
    <string name="chief_complaint">Chief Complaint</string>
    <string name="record">Record</string>
    <string name="cancel_record">Cancel Record</string>
    <string name="play_record">Play Record</string>
    <string name="stop_record">Stop Record</string>
    <string name="previous_medical_history">Previous Medical History</string>
    <string name="where_is_the_problem">Where is the problem</string>
    <string name="add_picture">Add Picture</string>
    <string name="add_images">Add Images</string>
    <string name="delete_pic">Delete pic</string>
    <string name="picture_1">Picture 1</string>
    <string name="add_file">Add file</string>
    <string name="click_here_to_fill_consultation_form">Click here to fill consultation form</string>
    <string name="hi">Hi,</string>
</resources>