<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userAuth.Register">
    <ImageView
        android:id="@+id/back_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        app:layout_constraintBottom_toBottomOf="parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/blue"
        android:textSize="32sp"
        android:fontFamily="@font/muli_black"
        android:textAllCaps="true"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/enter_full_name"
        app:hintTextColor="@color/black"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        android:layout_margin="12dp"
        app:startIconTint="@color/black"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:startIconDrawable="@drawable/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/enter_age"
        app:hintTextColor="@color/black"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        android:layout_margin="12dp"
        app:startIconTint="@color/black"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:startIconDrawable="@drawable/ic_calender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="3"
            android:textColor="@color/black"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_gender"
            android:layout_marginEnd="4dp"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            android:layout_margin="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:cursorVisible="false"
                android:textColor="@color/black"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@id/mobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_pc_background">
            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodePicker"
                android:layout_width="wrap_content"
                app:ccp_contentColor="@color/white"
                android:layout_height="wrap_content"
                app:ccp_showFlag="false"
                app:ccp_showNameCode="false"
                android:layout_gravity="center"
                />
        </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobileNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/enter_mobile_no"
        app:hintTextColor="@color/black"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        android:layout_marginStart="4dp"
        app:startIconTint="@color/black"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:maxLength="10"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/enter_email"
        app:hintTextColor="@color/black"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        android:layout_margin="12dp"
        app:startIconTint="@color/black"
        app:endIconMode="clear_text"
        android:importantForAutofill="no"
        app:endIconTint="@color/black"
        app:startIconDrawable="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"

            android:importantForAutofill="no"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/enter_password"
        android:layout_below="@+id/email"
        app:hintTextColor="@color/black"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:startIconTint="@color/black"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        android:layout_margin="12dp"
        app:startIconDrawable="@drawable/pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textSize="18sp"
        android:padding="12dp"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/blue"
        android:textAlignment="center"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_marginTop="18dp"
        android:background="#00000000"
        android:text="@string/already_registered"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/login"
        app:layout_constraintHorizontal_weight="1.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    <TextView
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:paddingHorizontal="8dp"
        android:text="@string/login"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/registerText"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    <RelativeLayout
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/progress_bar"
        android:elevation="8dp"
        android:padding="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true" />
    </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>